updated markdown cells

--- a/StockData.ipynb
+++ b/StockData.ipynb
@@ -2170,6 +2170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actually that was Aflack. Now we can scrape all of the ticker symbols."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
